# final-project

./: README.md
llm-ur-control/ur_agent/: CMakeLists.txt  package.xml
llm-ur-control/ur_agent/scripts/: llm.py  locations.py  ur_agent.py
llm-ur-control/ur_agent/scripts/tools/: ur.py
turtlebot3_ws/.catkin_tools/profiles/default/: devel_collisions.txt
turtlebot3_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
turtlebot3_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
turtlebot3_ws/devel/.private/dynamixel_sdk/: .catkin  setup.sh
turtlebot3_ws/devel/.private/dynamixel_sdk_examples/: .catkin  setup.sh
turtlebot3_ws/devel/.private/turtlebot3/: .catkin  .rosinstall
turtlebot3_ws/devel/.private/turtlebot3_bringup/: .catkin  .rosinstall  setup.sh
turtlebot3_ws/devel/.private/turtlebot3_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
turtlebot3_ws/devel/.private/turtlebot3_example/: .catkin  _setup_util.py  local_setup.sh
turtlebot3_ws/devel/.private/turtlebot3_fake/: .catkin  setup.sh
turtlebot3_ws/devel/.private/turtlebot3_gazebo/: .catkin  local_setup.sh  setup.sh
turtlebot3_ws/devel/.private/turtlebot3_msgs/: .catkin
turtlebot3_ws/devel/.private/turtlebot3_navigation/: .catkin  .rosinstall
turtlebot3_ws/devel/.private/turtlebot3_simulations/: .catkin  setup.sh
turtlebot3_ws/devel/.private/turtlebot3_slam/: .catkin
turtlebot3_ws/devel/.private/turtlebot3_teleop/: .catkin
turtlebot3_ws/devel/include/dynamixel_sdk_examples/: BulkGetItem.h  BulkGetItemRequest.h  BulkGetItemResponse.h  BulkSetItem.h  GetPosition.h  GetPositionRequest.h  GetPositionResponse.h  SetPosition.h  SyncGetPosition.h  SyncGetPositionRequest.h  SyncGetPositionResponse.h  SyncSetPosition.h
turtlebot3_ws/devel/include/turtlebot3_example/: Turtlebot3Action.h  Turtlebot3ActionFeedback.h  Turtlebot3ActionGoal.h  Turtlebot3ActionResult.h  Turtlebot3Feedback.h  Turtlebot3Goal.h  Turtlebot3Result.h
turtlebot3_ws/devel/include/turtlebot3_msgs/: SensorState.h  Sound.h  VersionInfo.h
turtlebot3_ws/devel/lib/dynamixel_sdk/: group_bulk_read.py  group_bulk_write.py  group_sync_read.py  group_sync_write.py  packet_handler.py  port_handler.py  robotis_def.py  (+2 more)
zrosa_ws/devel/: .catkin  .rosinstall  local_setup.sh
(+231 files in other folders)
