<?xml version="1.0"?>
<package format="2">
  <name>ur_agent</name>
  <version>0.0.1</version>
  <description>Embodied ROSA agent for the UR robot.</description>

  <maintainer email="mguasifali@gmail.com">asif</maintainer>
  <license>Apache 2.0</license>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build and Run dependencies -->
  <!-- Use <depend> for packages needed at both build and run time -->
  <depend>rospy</depend>         <!-- Core ROS Python client library -->
  <depend>std_msgs</depend>        <!-- Standard ROS messages (Header, etc.) -->
  <depend>geometry_msgs</depend>   <!-- Messages for poses, points, quaternions (PoseStamped, Point, Quaternion) -->
  <depend>actionlib</depend>       <!-- ROS 1 Action Client library -->
  <depend>actionlib_msgs</depend>  <!-- Standard action messages (GoalStatus) -->
  <depend>move_base_msgs</depend>  <!-- Messages specific to the move_base action (MoveBaseAction, MoveBaseGoal) -->
  <depend>tf</depend>              <!-- Needed for tf.transformations (quaternion_from_euler) -->

  <!-- Keep std_srvs if your agent uses other standard services -->
  <depend>std_srvs</depend>

  <!-- Optional: Keep these if you plan to add ROS tests -->
  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>

</package>